fixed stuck creds box size

--- a/copy contents of folder into deploy to update/all/medium/style.css
+++ b/copy contents of folder into deploy to update/all/medium/style.css
@@ -113,7 +113,7 @@ creds {
   border: 5px solid teal;
   padding: 8pt;
   border-radius: 10px;
-  width: 275px;
+  width: 20%;
   position: absolute; left: 30px;
   top: 20px;
   text-align: left;
